# OS-IPC-TP

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
TP/: logger.c  logger.h  reader.c  writer.c
